Rename project from laravelplate-authentication-sanctum to laravel10plate-authentication-sanctum - Updated README.md, composer.json, service provider class, InstallCommand, FileMerger, and all references to use new naming convention

--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
     },
     "autoload": {
         "psr-4": {
-            "Laravelplate\\Authentication\\": "src/"
+            "Laravel10plate\\Authentication\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Laravelplate\\Authentication\\LaravelplateAuthenticationServiceProvider"
+                "Laravel10plate\\Authentication\\Laravel10plateAuthenticationServiceProvider"
             ]
         }
     },
